# cast-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: __init__.py
examples/bird/: __init__.py  __main__.py  evaluation.py  harness.py  prompts.py  schema.py  tools.py
examples/officeqa/: __init__.py  __main__.py  evaluation.py  harness.py  prompts.py  tools.py
examples/swebench/: __init__.py  __main__.py  docker_env.py  harness.py  prompts.py  tools.py
src/cast_agent/: __init__.py  harness_utils.py  history.py  llm.py  parsing.py  types.py
src/cast_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cast_agent/loops/: __init__.py  _loop.py  cast.py  react.py  stuffed.py
src/cast_agent/tools/: __init__.py  json_repair.py  repl.py  web.py
